fixed a tag issues

--- a/index.html
+++ b/index.html
@@ -134,20 +134,26 @@
             
                 <h3 id="A's">Alabama</h3>
                     <h5>Big Beach Marathon</h5>
-                    <a href="http://bigbeachmarathon.com" target="_blank"></a>
+                    <a href="http://bigbeachmarathon.com" target="_blank">
                         <img src="images/big-beach-marathon-logo.png" style="height: 10%; width: 10%;">
-                    <a href="https://www.facebook.com/bigbeachmarathon/" target="_blank"></a><br>
+                    </a><br>
+                    <a href="https://www.facebook.com/bigbeachmarathon/" target="_blank">
                         <img src="images/facebook-icon.png" style="height: 2%; width: 2%;"/>
-                    <a href="https://www.instagram.com/bigbeach_marathon/" target="_blank"></a>
+                    </a>
+                    <a href="https://www.instagram.com/bigbeach_marathon/" target="_blank">
                         <img src="images/instagram-icon.jpg" style="height 2%; width: 2%;"/>
+                    </a>
                 <h3>Alaska</h3>
                     <h5>The Great Alaskan Running Cruise</h5>
-                    <a href="https://www.runningcruise.com/package/alaska-2020/" target="_blank"></a>
-                        <img src="images/The-Great-Alaskan-Running-Cruise-sm-300x193.png" style="height: 10%; width: 10%;"><br>
-                    <a href="https://www.facebook.com/runningcruise" target="_blank"></a>
+                    <a href="https://www.runningcruise.com/package/alaska-2020/" target="_blank">
+                        <img src="images/The-Great-Alaskan-Running-Cruise-sm-300x193.png" style="height: 10%; width: 10%;">
+                    </a><br>
+                    <a href="https://www.facebook.com/runningcruise" target="_blank">
                         <img src="images/facebook-icon.png" style="height: 2%; width: 2%;"/>
-                    <a href="https://www.instagram.com/marathonexpeditions/" target="_blank"></a>
+                    </a>
+                    <a href="https://www.instagram.com/marathonexpeditions/" target="_blank">
                         <img src="images/instagram-icon.jpg" style="height 2%; width: 2%;"/>
+                    </a>
                 <h3>Arizona</h3>
                 <h3>Arkansas</h3>
                 <h3 id="C's">California</h3>
