--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <body>
         <header>
             <h1 class="title">50 Half Marathons in 50 States <em>&#40;&#43;&#49;&#41;</em></h1>
-                <p id="statement">In June of 2010 a friend and I decided we wanted to run a half marathon. We started running together after work and on weekends. 3 months later we ran our first half marathon.<br> 
+                <p class="statement">In June of 2010 a friend and I decided we wanted to run a half marathon. We started running together after work and on weekends. 3 months later we ran our first half marathon.<br> 
             I love to travel and decided I wanted to run a half marathon in every state, not only as a way to see every state, but as a life long fitness goal. As of this post, I have completed 10 half marathons. <br>
                 I have started tracking the half marathons I would like to do in the states that I have not completed and will add more to the list below as I find new runs that I am interested in.
                 </p>
                 <nav>
                     <a href="#states_completed" >States Completed</a>
-                    <img id="diamond" src="images/diamond_gold.png"/>
+                    <img id="diamond" src="images/diamond_gold.png" alt="diamond"/>
                     <a href="#states_to_complete">States Yet to Complete</a>
                 </nav>
         </header>
@@ -40,8 +40,8 @@
                     <h4>Chicago Half Marathon & 5K</h4>
                     <p>September 12, 2010</p>
                     <p> Chicago, Illinois</p>
-                    <img id="personal" src="images/Illinois.jpg"/><br>
-                    <p id="statement">This was my first half marathon. I went with a group of friends for the weekend.<br>
+                    <img class="personal" src="images/Illinois.jpg"/><br>
+                    <p class="statement">This was my first half marathon. I went with a group of friends for the weekend.<br>
                         We found some underwear that said "will run for beer", "will run for wine" and "will run for margaritas".<br>
                         We each bought one and wore them on race day (outside our running pants) along with a "rockstar" headband. 
                     </p>
@@ -54,7 +54,7 @@
                     <h4>Rock 'n' Roll St. Louis </h4>
                     <p>October 23rd, 2011</p>
                     <p>St. Louis, Missouri</p>
-                    <img id="personal" src="images/rock_n_roll_st._louis.jpg"/><br>
+                    <img class="personal" src="images/rock_n_roll_st._louis.jpg"/><br>
                     <a href="https://www.athlinks.com/event/20276/results/Event/183018/Course/202116/Bib/13450" target="_blank">
                         <img id="icon_athlinks"  src="images/athlinks.png" />
                     </a>
@@ -64,8 +64,8 @@
                     <h4>Nike Women's Half Marathon</h4>
                     <p>April 28th, 2013</p>
                     <p>Washington, D.C.</p>
-                    <img id="personal" src="images/nike_womens_d.c.jpg"/><br>
-                    <p id="statement">
+                    <img class="personal" src="images/nike_womens_d.c.jpg"/><br>
+                    <p class="statement">
                         My <strong>favorite</strong> half marathon! I loved everything about my stay in D.C., from getting to stay and go out<br>
                         with my cousins who I don't get to see very often, to all the sights. My only mistake was walking for 8 hours<br>
                         And, the run itself was amazing! So much to see along the way and the weather was perfect.
@@ -80,8 +80,8 @@
                     <h4>Oklahoma City Memorial Marathon</h4>
                     <p>April 27th, 2014</p>
                     <p>Oklahoma City, Oklahoma</p>
-                    <img id="personal" src="images/Oklahoma_.jpg"/><br>
-                    <p id="statement">
+                    <img class="personal" src="images/Oklahoma_.jpg"/><br>
+                    <p class="statement">
                             One of my <em>least favorite</em> runs! There was a rain delay, so we all just slept in parking garages around the start<br>
                             line until the rain stopped. By the time the race started I hadn't had any food or water for 3+ hours. Not a great start. <br>
                             The course itself was nice, but this was definitely a rough one.    
@@ -95,8 +95,8 @@
                     <h4>Brewers Mini Marathon & 10K</h4>
                     <p>September 20th, 2014</p>
                     <p>Milwaukee, Wisconsin</p>
-                    <img id="personal" src="images/Brewers_wisconsin.jpg"/><br>
-                    <p id="statement">
+                    <img class="personal" src="images/Brewers_wisconsin.jpg"/><br>
+                    <p class="statement">
                            This run was my first half marathon with my husband. We almost missed the run because we took a wrong turn and <br>
                            couldn't get back to the starting area as all of the roads were closed. We got to the start line<br>
                            just as they were taking it down. For this run we got to run through the Brewer's stadium just before crossing the finish line.     
@@ -110,8 +110,8 @@
                     <h4>Mississippi Blues Marathon</h4>
                     <p>January 10th, 2015</p>
                     <p>Jackson, Mississippi</p>
-                    <img id="personal" src="images/mississippi_blues.jpg"/><br>
-                    <p id="statement">
+                    <img class="personal" src="images/mississippi_blues.jpg"/><br>
+                    <p class="statement">
                             One of my favorites! Up there with Utah's half.    
                     </p>
                     <a href="https://www.athlinks.com/event/5150/results/Event/374989/Course/555577/Bib/4059" target="_blank">
@@ -122,8 +122,8 @@
                 <h3 id="completed_2016">Utah</h3>
                     <h4>Big Cottonwood Marathon and Half</h4>
                     <p>September 10th, 2016</p>
-                    <img id="personal" src="images/big_cottonwood_utah.jpg"/><br>
-                    <p id="statement">
+                    <img class="personal" src="images/big_cottonwood_utah.jpg"/><br>
+                    <p class="statement">
                             Probably my 2nd favorite run!    
                     </p>
                     <a href="https://www.athlinks.com/event/12714/results/Event/510240/Course/758612/Bib/5046" target="_blank">
@@ -134,9 +134,9 @@
                 <h3>Kansas</h3>
                     <h4>Gobbler Grind</h4>
                     <p>November 13th, 2016</p>
-                    <img id="personal" src="images/gobbler_grind_kansas.jpg" /><br>
-                    <p id="statement">
-                            <em><storng>Finally</strong></em> got under 2:00:00 in this run!    
+                    <img class="personal" src="images/gobbler_grind_kansas.jpg" /><br>
+                    <p class="statement">
+                            <em><strong>Finally</strong></em> got under 2:00:00 in this run!    
                     </p>
                     <a href="https://www.athlinks.com/event/20233/results/Event/542544/Course/854971/Bib/1570" target="_blank">
                         <img id="icon_athlinks" src="images/athlinks.png"/>
@@ -147,8 +147,8 @@
                     <h4>The Halloween Half & 5K</h4>
                     <p>October 20th, 2018</p>
                     <p>Fort Worth, Texas</p>
-                    <img id="personal" src="images/fort_worth_tx.jpg"/><br>
-                    <p id="statement">
+                    <img class="personal" src="images/fort_worth_tx.jpg"/><br>
+                    <p class="statement">
                             My <strong>least favorite</strong> half marathon! The course was poorly marked, so we all went the wrong way for 1/4th of a mile<br>
                             Half of the course was flooded and I was 15 weeks pregnant. It was not a good run. However, this was our pregnancy announcement to<br>
                             our families and friends so atleast some good came out of it!    
@@ -162,8 +162,8 @@
                     <h4>IMT Des Moines Marathon</h4>
                     <p>October 20th, 2019</p>
                     <p>Des Moines, Iowa</p>
-                    <img id="personal" src="images/des_moines_iowa.jpg"/><br>
-                    <p id="statement">
+                    <img class="personal" src="images/des_moines_iowa.jpg"/><br>
+                    <p class="statement">
                             This run was exactly one year after our pregnancy announcement run.     
                     </p>
                     <a href="https://www.athlinks.com/event/2138/results/Event/888926/Course/1717670/Bib/6230" target="_blank">
