--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width">
         <link href="./style.css" type="text/css" rel="stylesheet"/>
-        <link rel="shortcut icon" href="images/color_Running_shoe_icon.png" />
+        <link rel="shortcut icon" href="images/color_Running_shoe_icon.png"/>
         <title>50 in 50</title> 
     </head>
     <body>
@@ -40,13 +42,13 @@
                     <h4>Chicago Half Marathon & 5K</h4>
                     <p>September 12, 2010</p>
                     <p> Chicago, Illinois</p>
-                    <img class="personal" src="images/Illinois.jpg"/><br>
+                    <img class="personal" src="images/Illinois.jpg" alt="Alysson's Illinois run"/><br>
                     <p class="statement">This was my first half marathon. I went with a group of friends for the weekend.<br>
                         We found some underwear that said "will run for beer", "will run for wine" and "will run for margaritas".<br>
                         We each bought one and wore them on race day (outside our running pants) along with a "rockstar" headband. 
                     </p>
                     <a href="https://www.athlinks.com/event/20834/results/Event/109889/Course/150811/Bib/14104" target="_blank">
-                        <img id="icon_athlinks" src="images/athlinks.png"/>
+                        <img class="icon_athlinks" src="images/athlinks.png" alt="Athlinks_icon" />
                     </a>
                 </article> 
                 <article> 
@@ -54,9 +56,9 @@
                     <h4>Rock 'n' Roll St. Louis </h4>
                     <p>October 23rd, 2011</p>
                     <p>St. Louis, Missouri</p>
-                    <img class="personal" src="images/rock_n_roll_st._louis.jpg"/><br>
+                    <img class="personal" src="images/rock_n_roll_st._louis.jpg" alt="Alysson's Missouri run"/><br>
                     <a href="https://www.athlinks.com/event/20276/results/Event/183018/Course/202116/Bib/13450" target="_blank">
-                        <img id="icon_athlinks"  src="images/athlinks.png" />
+                        <img class="icon_athlinks"  src="images/athlinks.png" alt="Athlinks_icon" />
                     </a>
                 </article>
                 <article>
@@ -64,7 +66,7 @@
                     <h4>Nike Women's Half Marathon</h4>
                     <p>April 28th, 2013</p>
                     <p>Washington, D.C.</p>
-                    <img class="personal" src="images/nike_womens_d.c.jpg"/><br>
+                    <img class="personal" src="images/nike_womens_d.c.jpg" alt="Alysson's D.C. run"/><br>
                     <p class="statement">
                         My <strong>favorite</strong> half marathon! I loved everything about my stay in D.C., from getting to stay and go out<br>
                         with my cousins who I don't get to see very often, to all the sights. My only mistake was walking for 8 hours<br>
@@ -72,7 +74,7 @@
                         
                     </p>
                     <a href="https://www.athlinks.com/event/34516/results/Event/230255/Course/399450/Bib/8278" target="_blank">
-                        <img id="icon_athlinks" src="images/athlinks.png"/>
+                        <img class="icon_athlinks" src="images/athlinks.png" alt="Athlinks_icon"/>
                     </a>
                 </article>
                 <article>
@@ -80,14 +82,14 @@
                     <h4>Oklahoma City Memorial Marathon</h4>
                     <p>April 27th, 2014</p>
                     <p>Oklahoma City, Oklahoma</p>
-                    <img class="personal" src="images/Oklahoma_.jpg"/><br>
+                    <img class="personal" src="images/Oklahoma_.jpg" alt="Alysson's Oklahoma run"/><br>
                     <p class="statement">
                             One of my <em>least favorite</em> runs! There was a rain delay, so we all just slept in parking garages around the start<br>
                             line until the rain stopped. By the time the race started I hadn't had any food or water for 3+ hours. Not a great start. <br>
                             The course itself was nice, but this was definitely a rough one.    
                     </p>
                     <a href="https://www.athlinks.com/event/5046/results/Event/377272/Course/558775/Bib/10645" target="_blank">
-                        <img id="icon_athlinks" src="images/athlinks.png"/>
+                        <img class="icon_athlinks" src="images/athlinks.png" alt="Athlinks_icon"/>
                     </a>
                 </article>
                 <article>
@@ -95,14 +97,14 @@
                     <h4>Brewers Mini Marathon & 10K</h4>
                     <p>September 20th, 2014</p>
                     <p>Milwaukee, Wisconsin</p>
-                    <img class="personal" src="images/Brewers_wisconsin.jpg"/><br>
+                    <img class="personal" src="images/Brewers_wisconsin.jpg" alt="Alysson's Wisconsin run"/><br>
                     <p class="statement">
                            This run was my first half marathon with my husband. We almost missed the run because we took a wrong turn and <br>
                            couldn't get back to the starting area as all of the roads were closed. We got to the start line<br>
                            just as they were taking it down. For this run we got to run through the Brewer's stadium just before crossing the finish line.     
-                    </p
+                    </p>
                     <a href="https://www.athlinks.com/event/121413/results/Event/396458/Course/524934/Bib/3268" target="_blank">
-                        <img id="icon_athlinks" src="images/athlinks.png"/>
+                        <img class="icon_athlinks" src="images/athlinks.png" alt="Athlinks_icon"/>
                     </a>
                 </article>
                 <article>
@@ -110,36 +112,36 @@
                     <h4>Mississippi Blues Marathon</h4>
                     <p>January 10th, 2015</p>
                     <p>Jackson, Mississippi</p>
-                    <img class="personal" src="images/mississippi_blues.jpg"/><br>
+                    <img class="personal" src="images/mississippi_blues.jpg" alt="Alysson's Mississippi run"/><br>
                     <p class="statement">
                             One of my favorites! Up there with Utah's half.    
                     </p>
                     <a href="https://www.athlinks.com/event/5150/results/Event/374989/Course/555577/Bib/4059" target="_blank">
-                        <img id="icon_athlinks" src="images/athlinks.png"/>
+                        <img class="icon_athlinks" src="images/athlinks.png" alt="Athlinks_icon"/>
                     </a>
                 </article>
                 <article>
                 <h3 id="completed_2016">Utah</h3>
                     <h4>Big Cottonwood Marathon and Half</h4>
                     <p>September 10th, 2016</p>
-                    <img class="personal" src="images/big_cottonwood_utah.jpg"/><br>
+                    <img class="personal" src="images/big_cottonwood_utah.jpg" alt="Alysson's Utah run"/><br>
                     <p class="statement">
                             Probably my 2nd favorite run!    
                     </p>
                     <a href="https://www.athlinks.com/event/12714/results/Event/510240/Course/758612/Bib/5046" target="_blank">
-                        <img id="icon_athlinks" src="images/athlinks.png"/>
+                        <img class="icon_athlinks" src="images/athlinks.png" alt="Athlinks_icon"/>
                     </a>
                 </article>
                 <article>
                 <h3>Kansas</h3>
                     <h4>Gobbler Grind</h4>
                     <p>November 13th, 2016</p>
-                    <img class="personal" src="images/gobbler_grind_kansas.jpg" /><br>
+                    <img class="personal" src="images/gobbler_grind_kansas.jpg" alt="Alysson's Kansas run"/><br>
                     <p class="statement">
                             <em><strong>Finally</strong></em> got under 2:00:00 in this run!    
                     </p>
                     <a href="https://www.athlinks.com/event/20233/results/Event/542544/Course/854971/Bib/1570" target="_blank">
-                        <img id="icon_athlinks" src="images/athlinks.png"/>
+                        <img class="icon_athlinks" src="images/athlinks.png" alt="Athlinks_icon"/>
                     </a>
                 </article>
                 <article>
@@ -147,14 +149,14 @@
                     <h4>The Halloween Half & 5K</h4>
                     <p>October 20th, 2018</p>
                     <p>Fort Worth, Texas</p>
-                    <img class="personal" src="images/fort_worth_tx.jpg"/><br>
+                    <img class="personal" src="images/fort_worth_tx.jpg" alt="Alysson's Texas run"/><br>
                     <p class="statement">
                             My <strong>least favorite</strong> half marathon! The course was poorly marked, so we all went the wrong way for 1/4th of a mile<br>
                             Half of the course was flooded and I was 15 weeks pregnant. It was not a good run. However, this was our pregnancy announcement to<br>
                             our families and friends so atleast some good came out of it!    
                     </p>
                     <a href="https://www.athlinks.com/event/223959/results/Event/787008/Course/1360242/Bib/4553" target="_blank">
-                        <img id="icon_athlinks" src="images/athlinks.png" />
+                        <img class="icon_athlinks" src="images/athlinks.png" alt="Athlinks_icon" />
                     </a>
                 </article>
                 <article>
@@ -162,12 +164,12 @@
                     <h4>IMT Des Moines Marathon</h4>
                     <p>October 20th, 2019</p>
                     <p>Des Moines, Iowa</p>
-                    <img class="personal" src="images/des_moines_iowa.jpg"/><br>
+                    <img class="personal" src="images/des_moines_iowa.jpg" alt="Alysson's Iowa run"/><br>
                     <p class="statement">
                             This run was exactly one year after our pregnancy announcement run.     
                     </p>
                     <a href="https://www.athlinks.com/event/2138/results/Event/888926/Course/1717670/Bib/6230" target="_blank">
-                        <img id="icon_athlinks" src="images/athlinks.png" />
+                        <img class="icon_athlinks" src="images/athlinks.png" alt="Athlinks_icon"/>
                     </a>
                 </article>
             
@@ -200,24 +202,24 @@
                 <h3 id="A's">Alabama</h3>
                     <h5>Big Beach Marathon</h5>
                     <a href="http://bigbeachmarathon.com" target="_blank">
-                        <img id="icon_main" src="images/big-beach-marathon-logo.png" >
+                        <img class="icon_main" src="images/big-beach-marathon-logo.png" alt="big-beach-marathon-logo"/>
                     </a><br>
                     <a href="https://www.facebook.com/bigbeachmarathon/" target="_blank">
-                        <img id="icon_social" src="images/facebook-icon.png" />
+                        <img class="icon_social" src="images/facebook-icon.png" alt="facebook-logo"/>
                     </a>
                     <a href="https://www.instagram.com/bigbeach_marathon/" target="_blank">
-                        <img id="icon_social" src="images/instagram-icon.jpg" />
+                        <img class="icon_social" src="images/instagram-icon.jpg" alt="instagram-logo" />
                     </a>
                 <h3>Alaska</h3>
                     <h5>The Great Alaskan Running Cruise</h5>
                     <a href="https://www.runningcruise.com/package/alaska-2020/" target="_blank">
-                        <img id="icon_main" src="images/The-Great-Alaskan-Running-Cruise-sm-300x193.png" >
+                        <img class="icon_main" src="images/The-Great-Alaskan-Running-Cruise-sm-300x193.png" alt="Alaskan-running-cruise-logo" />
                     </a><br>
                     <a href="https://www.facebook.com/runningcruise" target="_blank">
-                        <img id="icon_social" src="images/facebook-icon.png" />
+                        <img class="icon_social" src="images/facebook-icon.png" alt="facebook-logo" />
                     </a>
                     <a href="https://www.instagram.com/marathonexpeditions/" target="_blank">
-                        <img id="icon_social" src="images/instagram-icon.jpg" />
+                        <img class="icon_social" src="images/instagram-icon.jpg" alt="instagram-logo" />
                     </a>
                 <h3>Arizona</h3>
                 <h3>Arkansas</h3>
